# HomeProjectAbacus

./: .gitignore  .mcp.json  ARCHITECTURE.md  WEEK1_PRODUCT_DOCUMENT.md  WEEK2.md  databricks.yml  pyproject.toml  python.cmd  requirements.txt
ETL/common/: __init__.py  bronze_pipeline_config.py  bronze_sources.py  diagnostics.py  gold_pipeline_config.py  log_categories.py  log_messages.py  observability.py  phi_registry.py  policy_chunks.py  silver_cleaning.py  silver_pipeline_config.py
ETL/pipelines/: README.md
datasets/: DATA_CLASSIFICATION.md  claims_1000.csv
datasets/policies/: README.md
docs/: ARCHITECTURE.md  Detailed_Project_Document.docx  ERROR_CODES_REFERENCE.md  WEEK1_3_COMPLETION_STATUS.md  WEEK1_PRODUCT_DOCUMENT.md  WEEK4.md
docs/runbooks/: databricks-bootstrap.md  databricks-week1-3-evidence-checklist.md  local-bronze-streamlit-dashboard.md  week3-silver-validation.md
resources/: bronze.pipeline.yml
scripts/: build_local_analytics.py  generate_synthetic_claim_labels.py  generate_synthetic_policy_pdfs.py  local_ingest_bronze.py  train_denial_model.py
src/analytics/: claims_analytics.py  observability_assets.py  quality_assets.py  week2_analytics.py  week3_quality_assets.py
streamlit_app/: Home.py  bootstrap.py
tests/: __init__.py  test_bronze_bundle_contract.py  test_bronze_operations_contract.py  test_bronze_pipeline_contract.py  test_dataset_contract.py  test_gold_contract.py  test_local_pipeline.py  test_ml_contract.py  test_observability_contract.py  test_silver_contract.py  test_streamlit_data_access.py  test_streamlit_ui.py
(+78 files in other folders)
