[project]
name = "homeprojectabacus"
version = "0.1.0"
description = "Local bronze ingestion and Streamlit dashboard workflow for healthcare claims exploration."
readme = "ARCHITECTURE.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0,<7.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pdfplumber>=0.11,<1.0",
    "pyarrow>=23.0.0,<24.0.0",
    "streamlit>=1.50.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
